Update schedule dashboard styling - Fix shift log page when no users is returned to list, as it wouldnt   correctly add the error selection. - Merge edit and add modal for shifts into one modal for simplicity. - Refactor schedule dashboard js code to be properly layed out. - Decrease scrollable list max height to 350px. - Add global js function for handling API errors to refactor redundant   code.

--- a/src/django/auth_app/static/css/styles.css
+++ b/src/django/auth_app/static/css/styles.css
@@ -8,6 +8,10 @@ body, html {
     min-height: 100vh;         /* Let the document grow taller than the viewport */
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .z-top {
   z-index: 2000 !important;
 }
@@ -465,7 +469,7 @@ table {
 }
 
 .scrollable-list {
-  max-height: 400px;
+  max-height: 350px;
   overflow-y: auto;
 }
 
